bynkc/tests/fixtures/negative/483_messages_duplicate_code/src/bundle.bynk
commons bundle

uses bynk.locale

messages "en" @reference {
  "a" => "b"
  "a" => "c"
}
